# dpdk-testing-stuff

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  NOTES.org  README.md  build.rs  mutagen.yml  packet_size_gen.py  recordings.org  sync.conf
capsule/core/: Cargo.toml
capsule/core/src/: config.rs  ffi.rs  lib.rs
capsule/core/src/dpdk/: heap.rs  mbuf.rs  mempool.rs  mod.rs  port.rs
capsule/core/src/runtime/: core_map.rs  mod.rs
capsule/ffi/src/: shim.c
src/: coordinator.rs  gpu.rs  kernel.c  kernel.cl  kernel.cu  main.rs  meta.rs  portinfo.rs
