[package]
name = "dpdk-gpu-test"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#capsule = { git = "https://github.com/nitros12/capsule.git", features = [], rev = "85bbe0657c412571002b66a0c89f6c7028027323" }
capsule = { path = "../capsule/core", features = []}

[build-dependencies]
cc = "1.0.66"
# tracing = { version = "0.1.17", features = ["log", "log-always"] }
# simple_logger = "1.6.0"
