[package]
name = "dpdk-gpu-test"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capsule = { git = "https://github.com/nitros12/capsule.git", features = [], rev = "d78f7110e474a87fd227e0ee9021b2b7f2cbfc6a" }
#capsule = { path = "../capsule/core", features = []}
howlong = "0.1.6"

[build-dependencies]
cc = "1.0.66"
# tracing = { version = "0.1.17", features = ["log", "log-always"] }
# simple_logger = "1.6.0"
