[package]
name = "dpdk-gpu-test"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capsule = { git = "https://github.com/nitros12/capsule.git", features = [], rev = "efea01c191e059ab582a801d3a3a21330e40ef02" }
#capsule = { path = "../capsule/core", features = []}
#howlong = "0.1.6"
page_size = "0.4.2"
rustacuda = "0.1.2"
structopt = "0.3.21"

[build-dependencies]
cc = "1.0.66"
# tracing = { version = "0.1.17", features = ["log", "log-always"] }
# simple_logger = "1.6.0"
